reduce z-index of tooltips, fixes #9360

--- a/resources/assets/stylesheets/less/tooltip.less
+++ b/resources/assets/stylesheets/less/tooltip.less
@@ -16,7 +16,7 @@
     text-align: left;
     text-shadow: 0 1px 0 fade(#fff, 50%);
     white-space: normal;
-    z-index: 10000;
+    z-index: 100;
 
     word-wrap: break-word;
     hyphens: auto;
